--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="navbar navbar-expand-lg  navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Django CRM</a>
+      <a class="navbar-brand" href="{% url 'website:home' %}">Django CRM</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,6 +8,10 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             
           {% if user.is_authenticated %}
+          
+          <li class="nav-item">
+            <a href="{%  url 'website:add_record' %}" class="nav-link">Add Record</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'website:logout' %}">Logout</a>
           </li>
@@ -18,11 +22,8 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'website:home' %}">Login</a>
           </li>
-
           {% endif %}
-
         </ul>
-
       </div>
     </div>
   </nav>
