--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -4,11 +4,49 @@
 {% endblock title %}
 
 {% block content %}
-    <div class="col-md-6 offset-md-3">
+    
 
         {% if user.is_authenticated %}
-            <h1>Hello World</h1>
+            
+            {% if records %}
+                
+                    <table class="table table-striped table-hover table-bordered">
+                        <thead>
+                          <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Phone</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">City</th>
+                            <th scope="col">State</th>
+                            <th scope="col">Zipcode</th>
+                            <th scope="col">Created At</th>
+                            <th scope="col">Id</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            {% for record in records %}
+                          <tr>
+                            
+                            <td><a class="nav-link" href="{% url 'website:record' record.id %}">{{ record.first_name }} {{ record.last_name }}</a></td>
+                            <td>{{ record.email }}</td>
+                            <td>{{ record.phone }}</td>
+                            <td>{{ record.address }}</td>
+                            <td>{{ record.city }}</td>
+                            <td>{{ record.state }}</td>
+                            <td>{{ record.zipcode }}</td>
+                            <td>{{ record.created_at }}</td>
+                            <td><a class="nav-link" href="{% url 'website:record' record.id %}">{{ record.id }}</a></td>
+                            
+                          </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+                
+                
+            {% endif %}
         {% else %}
+        <div class="col-md-6 ">
         <h1>Login</h1>
         <form method="post" action="{% url 'website:home' %}">
             {% csrf_token %}
@@ -24,6 +62,8 @@
                 <button type="submit" class="btn btn-secondary offset-4">Login</button>
         </form>
         {% endif %}
+
+
     </div>
     
 {% endblock content %}
